demo-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '10'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '9'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '10'
    alb.ingress.kubernetes.io/success-codes: '200-301'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-4:621547421844:certificate/edfcc813-8e36-46fe-b446-72247f64a7c7
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/auth-type: cognito
    alb.ingress.kubernetes.io/auth-idp-cognito: '{"userPoolARN":"arn:aws:cognito-idp:ap-southeast-4:621547421844:userpool/ap-southeast-4_GDwHSmx0k","userPoolClientID":"5713g8vrn1co8m3mbsugq63mh6","userPoolDomain":"eval-auth-pool"}'
    alb.ingress.kubernetes.io/load-balancer-name: demo
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=60
    alb.ingress.kubernetes.io/actions.forward-to-eval: >
      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"eval","servicePort":8000,"weight":100}],"targetGroupStickinessConfig":{"enabled":true,"durationSeconds":200}}}
    alb.ingress.kubernetes.io/actions.forward-to-rf-gradio: >
      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"rf-gradio","servicePort":8000,"weight":100}],"targetGroupStickinessConfig":{"enabled":true,"durationSeconds":200}}}
  labels:
    app: eval
spec:
  ingressClassName: alb
  rules:
     - http:
        paths:
        - path: /eval
          pathType: Prefix
          backend:
            service: 
              name: forward-to-eval
              port: 
                name: use-annotation
        - path: /rf
          pathType: Prefix
          backend:
            service: 
              name: forward-to-rf-gradio
              port: 
                name: use-annotation
